# ChezInfix

./: Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  configure.sh
doc/: chez-infix.texi
lib/infix/: pratt.sls
meta/autoconf/: ax-chez-scheme.m4
tests/: checks.sls  infix-pratt.sps
